[project]
name = "janus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cloudflare>=4.3.1",
    "docker>=7.1.0",
    "fastapi>=0.128.5",
    "httpx>=0.28.1",
    "pylint>=3.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=5.0.0",
    "pydantic-settings>=2.7.1",
    "requests>=2.32.3",
    "uvicorn>=0.40.0",
]

[tool.pytest.ini_options]
addopts = "-q --cov=backend --cov-report=term-missing --cov-fail-under=65"
